# CampEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CampEngine++/: main.cpp
CampEngine++.mindnode/: contents.xml  viewState.plist
CampEngine++.xcodeproj/: project.pbxproj
CampEngine++.xcodeproj/project.xcworkspace/xcuserdata/noahcampagne.xcuserdatad/Bookmarks/: bookmarks.plist
CampEngine++.xcodeproj/xcshareddata/xcschemes/: CampEngine++.xcscheme
CampEngine++.xcodeproj/xcuserdata/noahcampagne.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CampEngine++.xcodeproj/xcuserdata/noahcampagne.xcuserdatad/xcschemes/: xcschememanagement.plist
app.dSYM/Contents/Resources/DWARF/: app
app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
dependencies/include/: cenginepp.h
dependencies/include/event/: event.dispatcher.h  event_handler.h  event_listener.h  events.h  mouse_events.h
dependencies/include/event/categories/: action_events.h  keyboard_events.h  mouse_events.h  widget_events.h
dependencies/include/game/: constants.h  game.h
dependencies/include/glad/: glad.h
dependencies/include/input/: input.h
dependencies/include/materials/: material.h
dependencies/include/render/: actor.h  post_processor.h  renderable.h  widget.h
dependencies/include/render/text/: character.h  text_renderer.h
dependencies/include/shaders/: shader.h
dependencies/include/textures/: texture.h
dependencies/include/utils/: conversions.h  filereader.h  gui_helper.h  logger.h  resource_manager.h
dependencies/include/view/: camera.h  level.h
dependencies/include/view/screens/: screen.h
dependencies/src/glad/: glad.c
include/: cenginepp.h
include/CampEngine/: Initialize.h
include/CampEngine/Game/: Constants.h  Game.h
include/CampEngine/Game/Events/: Event.h  EventHandler.h
include/CampEngine/Game/Events/Categories/: ActionEvents.h  KeyboardEvents.h  MouseEvents.h  TickEvents.h  WidgetEvents.h  WindowEvents.h
include/CampEngine/Game/Input/: Input.h
include/CampEngine/Graphics/: Camera.h  GLRenderer.h  GL_Renderer.h  Level.h  PostProcessor.h  Screen.h  Shader.h  Texture.h
include/CampEngine/Graphics/Core/: IWidget.h  RenderObject.h  Renderable.h  Widget.h
include/CampEngine/Graphics/Core/Text/: TextRenderer.h
include/CampEngine/Graphics/Scene/: Decoration.h  Entity.h  Particle.h  Sprite.h  Tile.h
include/CampEngine/Graphics/Screens/: DebugScreen.h  TestScreen.h
include/CampEngine/Graphics/Widgets/: Button.h  Canvas.h  Dropdown.h  ITooltip.h  Panel.h  ProgressBar.h  Slider.h  Tab.h  TabButton.h  TabGroup.h  TextBox.h  TextInput.h  TexturedButton.h  Tooltip.h
include/CampEngine/Physics/: Collidable.h  CollisionManifold.h  CollisionsHandler.h  Maths.h  PhysicsEnvironment.h  RigidBody.h
include/CampEngine/Utils/: FileReader.h  FileUtils.h  GuiHelper.h  ResourceManager.h  ScheduledExecutor.h  SortUtils.h  gui_helper.h
include/game/: game.h
include/game/events/: event_handler.h
include/game/events/categories/: action_events.h  keyboard_events.h  mouse_events.h  widget_events.h
include/game/input/: input.h
include/graphics/: level.h  post_processor.h  screen.h  shader.h
include/graphics/core/: renderable.h  widget.h
include/graphics/core/text/: character.h  text_renderer.h
include/graphics/render/: decoration.h  entity.h  particle.h  sprite.h  tile.h
include/physics/: aabb.h  collidable.h  collision_manifold.h  collisions_handler.h  force.h  maths.h  physics_environment.h  physics_object.h  rigid_body.h
include/utils/: gui_helper.h  resource_manager.h
resources/shaders/: fragmentShader.glsl  text.fs  text.vs  vertexShader.glsl
resources/shaders/lit/: defaultLitShader.fs  defaultLitShader.vs
resources/shaders/screen/: screen.fs
resources/shaders/screen/post_processing/: grayscale.fs  reverse_colors.fs
resources/shaders/shapes/: circle.fs  rectangle.vs
resources/shaders/widget/: widget.fs
src/Game/: Constants.cpp  Game.cpp
src/Game/Events/: EventHandler.cpp
src/Game/Input/: Input.cpp
src/Graphics/: Camera.cpp  Level.cpp  PostProcessor.cpp  Screen.cpp  Shader.cpp  Texture.cpp  shader.cpp
src/Graphics/Core/: IWidget.cpp  Renderable.cpp  Widget.cpp
src/Graphics/Core/Text/: Character.cpp  TextRenderer.cpp
src/Graphics/Scene/: Decoration.cpp  Entity.cpp  Particle.cpp  Sprite.cpp  Tile.cpp
src/Graphics/Screens/: DebugScreen.cpp  TestScreen.cpp
src/Graphics/Widgets/: Button.cpp  Dropdown.cpp  ITooltip.cpp  Panel.cpp  ProgressBar.cpp  Slider.cpp  Tab.cpp  TabButton.cpp  TabGroup.cpp  TextBox.cpp  TextInput.cpp  TexturedButton.cpp  Tooltip.cpp
src/Graphics/Widgets/Internal/: Circle.cpp  Image.cpp  Rectangle.cpp
src/Physics/: AABB.cpp  Collidable.cpp  CollisionManifold.cpp  CollisionsHandler.cpp  Force.cpp  Maths.cpp  PhysicsEnvironment.cpp  RigidBody.cpp
src/Utils/: Conversions.cpp  FileReader.cpp  FileUtils.cpp  GuiHelper.cpp  Logger.cpp  ResourceManager.cpp  conversions.cpp  filereader.cpp  gui_helper.cpp  logger.cpp  resource_manager.cpp  stb.cpp
src/event/: event_handler.cpp  event_listener.cpp  events.cpp
src/game/: constants.cpp  game.cpp
src/game/events/: event_handler.cpp
src/game/input/: input.cpp
src/graphics/: camera.cpp  level.cpp  post_processor.cpp  screen.cpp  shader.cpp  texture.cpp
src/graphics/core/: renderable.cpp  widget.cpp
src/graphics/core/text/: character.cpp  text_renderer.cpp
src/graphics/render/: decoration.cpp  entity.cpp  particle.cpp  sprite.cpp  tile.cpp
src/input/: input.cpp
src/materials/: material.cpp
src/physics/: aabb.cpp  collidable.cpp  collision_manifold.cpp  collisions_handler.cpp  force.cpp  maths.cpp  physics_environment.cpp  physics_object.cpp  rigid_body.cpp
src/render/: actor.cpp  post_processor.cpp  renderable.cpp  widget.cpp
src/render/text/: character.cpp  text_renderer.cpp
src/shaders/: shader.cpp
src/textures/: texture.cpp
src/utils/: conversions.cpp  filereader.cpp  gui_helper.cpp  logger.cpp  resource_manager.cpp
src/view/: camera.cpp  level.cpp
src/view/screens/: screen.cpp
(+3 files in other folders)
